style.css
*,
*::after,
*::before {
	margin: 0;
	padding: 0;
	box-sizing: inherit;
}

html {
	font-size: 62.5%;
}

.center {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

body {
	box-sizing: border-box;
	font-family: "Outfit", sans-serif;
	font-size: 1.6rem;
	color: hsl(30, 1%, 42%);
}

.container {
	width: 100%;
	display: grid;
	place-items: center;
	background-color: hsl(30, 54%, 90%);
}

.card {
	width: 50%;
	border-radius: 2rem;
	margin: 12rem auto;
	padding: 4rem;
	padding-bottom: 0;
	font-size: 1.6rem;
}

.container .card {
	background-color: #fff;
}

.header {
	margin-bottom: 3rem;
}

.header__image img {
	width: 100%;
	border-radius: 1rem;
}

.header__title {
	font-family: "Young Serif", serif;
	font-size: 3.9rem;
	color: hsl(24, 5%, 18%);
	margin: 3rem 0;
	font-weight: 500;
}

.header__description {
	color: hsl(30, 5%, 47%);
	font-weight: 500;
}

.attribution {
	align-self: flex-end;
	justify-content: flex-end;
}

.prep-time {
	width: 100%;
	padding: 2rem;
	padding-bottom: 0;
	background-color: hsl(330, 100%, 98%);
	border-radius: 1rem;
}

.prep-time__title {
	color: hsl(332, 51%, 32%);
	margin-bottom: 1rem;
	font-size: 1.8rem;
}

.prep-time__list,
.ingredients__list,
.instructions__list {
	margin: 2rem;
	list-style-position: outside;
	line-height: 2;
}

.instructions__list {
	padding-left: 2rem;
}

.prep-time__el span,
.instruction__title,
li::marker {
	font-weight: bolder;
	color: hsl(16, 12%, 37%);
}

li::marker {
	font-size: small;
}

.ingredients,
.instructions,
.nutrition {
	margin: 2rem 0;
}

.mid-title {
	font-family: "Young Serif", serif;
	color: hsl(14, 45%, 36%);
	letter-spacing: 0.2rem;
	font-size: 2.5rem;
	margin-bottom: 2rem;
}

hr {
	color: hsl(30, 10%, 34%);
	opacity: 0.8;
	font-weight: bold;
}

li p {
	padding-left: 2rem;
}

.nutrition__description {
	margin-bottom: 2rem;
}

table {
	width: 100%;
	border-collapse: collapse;
}

td {
	border-bottom: 1px solid rgba(61, 87, 113, 0.4);
	padding: 1rem;
	padding-left: 5rem;
}

tr:last-child > td {
	border-bottom: none;
}

.nutrition__name {
	font-size: 1.7rem;
	font-weight: 500;
}

.nutrition__value {
	font-weight: 700;
	color: hsl(14, 45%, 36%);
	font-size: 1.8rem;
}

footer.attribution {
	width: 100%;
	height: 50rem;
	background-color: #fff;
	display: flex;
	align-items: flex-end;
	justify-content: center;
}

@media only screen and (max-width: 760px) {
	.body {
		font-size: 50%;
	}
	.header__title {
		font-size: 3rem;
	}
}

@media only screen and (max-width: 560px) {
	.card {
		width: 100%;
		margin: 0;
		padding: 0;
		border-radius: 0;
		font-size: 1.2rem;
	}

	.header__meta {
		margin: 0 3rem;
	}

	.header__image img {
		border-radius: 0;
	}

	.main {
		margin: 3rem;
	}

	.prep-time__list,
	.ingredients__list,
	.instructions__list {
		margin: 1rem;
		line-height: 1.5;
	}

	.instructions__list {
		padding-left: 1rem;
	}

	td {
		padding: 1rem;
		padding-left: 2.5rem;
	}

	.nutrition__name {
		font-size: 1rem;
		font-weight: 500;
	}

	.nutrition__value {
		font-weight: 600;
		font-size: 1.3rem;
	}

	li p {
		padding-left: 1rem;
	}
}

